--- a/Google_Extension/popup.html
+++ b/Google_Extension/popup.html
@@ -13,6 +13,6 @@
             <button type="submit" id="sendDataButton">Submit</button>
         </form>
     </div>
-    <script src="{{ url_for('static', filename='popup.js') }}"></script>
+    <script src="popup.js"></script>
 </body>
 </html>
